<resources>
    <string name="app_name">SIPI</string>
    <string name="settings">Settings</string>
    <string name="source_select">Select a source</string>
    <string name="citation_style_select">Select a citation style</string>
    <string name="author_first_name">Author\'s First name</string>
    <string name="author_last_name">Author\'s Last name</string>
    <string name="book_title">Book Title</string>
    <string name="edition">Edition</string>
    <string name="volume">Volume</string>
    <string name="publisher">Publisher</string>
    <string name="year">Year</string>
    <string name="pages">Pages(1 or 1-10 or 10-20)</string>
    <string name="journal_title">Journal Title</string>
    <string name="article_title">Article Title</string>
    <string name="doi_url">DOI/URL</string>
    <string name="upload_date">Upload Date(optional)</string>
    <string name="website">Website</string>
    <string name="page_article_title">Page/Article Title</string>
    <string name="public_date">Publication Date</string>
    <string name="date_accessed">Date(optional)</string>
    <string name="video_title">Video Title</string>
    <string name="uploaded_by">Who Uploaded?</string>
    <string name="username">Username</string>
    <string name="editor_first_name">Editor First name</string>
    <string name="editor_last_name">Editor Last name</string>
    <string name="translator_first_name">Translator First name</string>
    <string name="translator_last_name">Translator Last name</string>
    <string name="citate">citate</string>
    <string name="clear">Clear</string>
    <string name="mla_book1">MLA-Book</string>
    <string name="mla_website2">MLA-Website</string>
    <string name="mla_journal3">MLA-Journal</string>
    <string name="mla_video4">MLA-Video</string>
    <string name="apa_book5">APA-Book</string>
    <string name="apa_website6">APA-Website</string>
    <string name="apa_journal7">APA-Journal</string>
    <string name="apa_video8">APA-Video</string>
    <string name="chicago_book9">CHICAGO-Book</string>
    <string name="chicago_website10">CHICAGO-Website</string>
    <string name="chicago_journal11">CHICAGO-Journal</string>
    <string name="chicago_video12">CHICAGO-Video</string>
    <string name="works_cited">Works Cited</string>
    <string name="in_txt_citation">In-text Citation</string>
    <string name="add">Add</string>
    <string name="reduce">Reduce</string>

</resources>